tests/fixtures/svs-v3/invalid/future-bootstrap.hex
245a0658071108036e646e0807737065633131343601031400151ac918ca16070908046e6f6465080161d209d404f4865700d6010116031b010017206d17fed0cad1b9913b7d59212b87fd200a7ccb74cf06147992d63f56cae8ee61
